--- a/Handmade/Handmade.vcxproj
+++ b/Handmade/Handmade.vcxproj
@@ -69,12 +69,14 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);..\Development Libraries\OpenGL\include;..\Development Libraries\SDL\include;..\Development Libraries\FMOD\include;</IncludePath>
-    <LibraryPath>$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(NETFXKitsDir)Lib\um\x86;..\Development Libraries\OpenGL\lib;..\Development Libraries\SDL\lib;..\Development Libraries\FMOD\lib;</LibraryPath>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);..\Development Libraries\GLM\include;..\Development Libraries\GLEW\include;..\Development Libraries\SDL\include;..\Development Libraries\FMOD\include;</IncludePath>
+    <LibraryPath>$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(NETFXKitsDir)Lib\um\x86;..\Development Libraries\GLEW\lib;..\Development Libraries\SDL\lib;..\Development Libraries\FMOD\lib;</LibraryPath>
+    <ExecutablePath>$(VC_ExecutablePath_x86);$(WindowsSDK_ExecutablePath);$(VS_ExecutablePath);$(MSBuild_ExecutablePath);$(SystemRoot)\SysWow64;$(FxCopDir);$(PATH);</ExecutablePath>
+    <ReferencePath>$(VC_ReferencesPath_x86);</ReferencePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);..\Development Libraries\OpenGL\include;..\Development Libraries\SDL\include;..\Development Libraries\FMOD\include;</IncludePath>
-    <LibraryPath>$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(NETFXKitsDir)Lib\um\x86;..\Development Libraries\OpenGL\lib;..\Development Libraries\SDL\lib;..\Development Libraries\FMOD\lib;</LibraryPath>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);..\Development Libraries\GLM\include;..\Development Libraries\GLEW\include;..\Development Libraries\SDL\include;..\Development Libraries\FMOD\include;</IncludePath>
+    <LibraryPath>$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(NETFXKitsDir)Lib\um\x86;..\Development Libraries\GLEW\lib;..\Development Libraries\SDL\lib;..\Development Libraries\FMOD\lib;</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -88,6 +90,7 @@
     <Link>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_net.lib;glew32.lib;opengl32.lib;fmod_vc.lib;fmodL_vc.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
+      <AdditionalLibraryDirectories>..\Development Libraries\FMOD\bin;</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -128,8 +131,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <None Include="Shaders\Debug.frag" />
-    <None Include="Shaders\Debug.vert" />
     <None Include="Shaders\Main.frag" />
     <None Include="Shaders\Main.vert" />
   </ItemGroup>
@@ -143,9 +144,9 @@
     <ClInclude Include="Buffer.h" />
     <ClInclude Include="BufferManager.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="HUDCamera.h" />
     <ClInclude Include="Client.h" />
     <ClInclude Include="Color.h" />
-    <ClInclude Include="Component.h" />
     <ClInclude Include="DebugManager.h" />
     <ClInclude Include="EndState.h" />
     <ClInclude Include="Game.h" />
@@ -158,8 +159,6 @@
     <ClInclude Include="Line3D.h" />
     <ClInclude Include="MainCamera.h" />
     <ClInclude Include="MainState.h" />
-    <ClInclude Include="Matrix3D.h" />
-    <ClInclude Include="Matrix4D.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="OBB2D.h" />
     <ClInclude Include="OBB3D.h" />
@@ -178,13 +177,8 @@
     <ClInclude Include="StartState.h" />
     <ClInclude Include="Text.h" />
     <ClInclude Include="TextureManager.h" />
-    <ClInclude Include="TimeManager.h" />
     <ClInclude Include="Tools.h" />
-    <ClInclude Include="Transform.h" />
     <ClInclude Include="Variable.h" />
-    <ClInclude Include="Vector2D.h" />
-    <ClInclude Include="Vector3D.h" />
-    <ClInclude Include="Vector4D.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AABB2D.cpp" />
@@ -196,6 +190,7 @@
     <ClCompile Include="Buffer.cpp" />
     <ClCompile Include="BufferManager.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="HUDCamera.cpp" />
     <ClCompile Include="Client.cpp" />
     <ClCompile Include="Color.cpp" />
     <ClCompile Include="DebugManager.cpp" />
@@ -210,8 +205,6 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MainCamera.cpp" />
     <ClCompile Include="MainState.cpp" />
-    <ClCompile Include="Matrix3D.cpp" />
-    <ClCompile Include="Matrix4D.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="OBB2D.cpp" />
     <ClCompile Include="OBB3D.cpp" />
@@ -229,9 +222,7 @@
     <ClCompile Include="StartState.cpp" />
     <ClCompile Include="Text.cpp" />
     <ClCompile Include="TextureManager.cpp" />
-    <ClCompile Include="TimeManager.cpp" />
     <ClCompile Include="Tools.cpp" />
-    <ClCompile Include="Transform.cpp" />
     <ClCompile Include="Variable.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
