--- a/Handmade/Handmade.vcxproj.filters
+++ b/Handmade/Handmade.vcxproj.filters
@@ -31,14 +31,8 @@
     <Filter Include="Header Files\Components\Audio">
       <UniqueIdentifier>{396013c2-095e-44a9-b3e7-73586546202d}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\Components\Maths">
-      <UniqueIdentifier>{628973da-13f3-404b-9c20-270a053e65c2}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Header Files\Components\Network">
       <UniqueIdentifier>{7fc6c8fe-c7b6-4dde-ac19-07197a02a0d2}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header Files\Components\Physics">
-      <UniqueIdentifier>{e47e5664-f437-43ed-9082-d0f831ba39b0}</UniqueIdentifier>
     </Filter>
     <Filter Include="Header Files\Components\Collision">
       <UniqueIdentifier>{791b9fa1-4df8-46c2-92cb-07c272d79629}</UniqueIdentifier>
@@ -67,9 +61,6 @@
     <Filter Include="Source Files\Components\Audio">
       <UniqueIdentifier>{b81f9d0c-a5dd-4b2f-8068-8fc54c6318f3}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\Components\Maths">
-      <UniqueIdentifier>{baf560a3-16c6-4e00-92e9-dac39831427e}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source Files\Components\Network">
       <UniqueIdentifier>{741cb190-61b7-4cbf-9967-bff1c515263e}</UniqueIdentifier>
     </Filter>
@@ -79,17 +70,14 @@
     <Filter Include="Source Files\Components\Visual">
       <UniqueIdentifier>{952c6fe5-7ab9-449b-a46a-397cb483c6b9}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\Components\Physics">
-      <UniqueIdentifier>{ac305576-8cee-40ae-91dc-3e7d8216e0f1}</UniqueIdentifier>
+    <Filter Include="Header Files\Components\Maths">
+      <UniqueIdentifier>{323b05f5-7655-4c36-be74-d8ce089bd92a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Components\Maths">
+      <UniqueIdentifier>{a6e33328-626d-4df3-8f46-7ada7c7ffa25}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Shaders\Debug.frag">
-      <Filter>Shaders</Filter>
-    </None>
-    <None Include="Shaders\Debug.vert">
-      <Filter>Shaders</Filter>
-    </None>
     <None Include="Shaders\Main.frag">
       <Filter>Shaders</Filter>
     </None>
@@ -101,32 +89,11 @@
     <ClInclude Include="Audio.h">
       <Filter>Header Files\Components\Audio</Filter>
     </ClInclude>
-    <ClInclude Include="Matrix3D.h">
-      <Filter>Header Files\Components\Maths</Filter>
-    </ClInclude>
-    <ClInclude Include="Matrix4D.h">
-      <Filter>Header Files\Components\Maths</Filter>
-    </ClInclude>
-    <ClInclude Include="Quaternion.h">
-      <Filter>Header Files\Components\Maths</Filter>
-    </ClInclude>
-    <ClInclude Include="Vector2D.h">
-      <Filter>Header Files\Components\Maths</Filter>
-    </ClInclude>
-    <ClInclude Include="Vector3D.h">
-      <Filter>Header Files\Components\Maths</Filter>
-    </ClInclude>
-    <ClInclude Include="Vector4D.h">
-      <Filter>Header Files\Components\Maths</Filter>
-    </ClInclude>
     <ClInclude Include="Client.h">
       <Filter>Header Files\Components\Network</Filter>
     </ClInclude>
     <ClInclude Include="Server.h">
       <Filter>Header Files\Components\Network</Filter>
-    </ClInclude>
-    <ClInclude Include="Physics.h">
-      <Filter>Header Files\Components\Physics</Filter>
     </ClInclude>
     <ClInclude Include="AABB2D.h">
       <Filter>Header Files\Components\Collision</Filter>
@@ -176,21 +143,6 @@
     <ClInclude Include="Text.h">
       <Filter>Header Files\Components\Visual</Filter>
     </ClInclude>
-    <ClInclude Include="Transform.h">
-      <Filter>Header Files\Components\Visual</Filter>
-    </ClInclude>
-    <ClInclude Include="GameObject.h">
-      <Filter>Header Files\GameObjects</Filter>
-    </ClInclude>
-    <ClInclude Include="Grid.h">
-      <Filter>Header Files\GameObjects</Filter>
-    </ClInclude>
-    <ClInclude Include="HUD.h">
-      <Filter>Header Files\GameObjects</Filter>
-    </ClInclude>
-    <ClInclude Include="MainCamera.h">
-      <Filter>Header Files\GameObjects</Filter>
-    </ClInclude>
     <ClInclude Include="GameState.h">
       <Filter>Header Files\GameStates</Filter>
     </ClInclude>
@@ -198,12 +150,6 @@
       <Filter>Header Files\GameStates</Filter>
     </ClInclude>
     <ClInclude Include="Buffer.h">
-      <Filter>Header Files\Main</Filter>
-    </ClInclude>
-    <ClInclude Include="Camera.h">
-      <Filter>Header Files\Main</Filter>
-    </ClInclude>
-    <ClInclude Include="Component.h">
       <Filter>Header Files\Main</Filter>
     </ClInclude>
     <ClInclude Include="Game.h">
@@ -224,9 +170,6 @@
     <ClInclude Include="BufferManager.h">
       <Filter>Header Files\Managers</Filter>
     </ClInclude>
-    <ClInclude Include="DebugManager.h">
-      <Filter>Header Files\Managers</Filter>
-    </ClInclude>
     <ClInclude Include="InputManager.h">
       <Filter>Header Files\Managers</Filter>
     </ClInclude>
@@ -239,31 +182,46 @@
     <ClInclude Include="TextureManager.h">
       <Filter>Header Files\Managers</Filter>
     </ClInclude>
-    <ClInclude Include="TimeManager.h">
-      <Filter>Header Files\Managers</Filter>
-    </ClInclude>
     <ClInclude Include="StartState.h">
       <Filter>Header Files\GameStates</Filter>
+    </ClInclude>
+    <ClInclude Include="EndState.h">
+      <Filter>Header Files\GameStates</Filter>
+    </ClInclude>
+    <ClInclude Include="Quaternion.h">
+      <Filter>Header Files\Components\Maths</Filter>
+    </ClInclude>
+    <ClInclude Include="HUD.h">
+      <Filter>Header Files\GameObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject.h">
+      <Filter>Header Files\GameObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="MainCamera.h">
+      <Filter>Header Files\GameObjects</Filter>
     </ClInclude>
     <ClInclude Include="SplashScreen.h">
       <Filter>Header Files\GameObjects</Filter>
     </ClInclude>
-    <ClInclude Include="EndState.h">
-      <Filter>Header Files\GameStates</Filter>
+    <ClInclude Include="DebugManager.h">
+      <Filter>Header Files\Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="Grid.h">
+      <Filter>Header Files\GameObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="Physics.h">
+      <Filter>Header Files\Components\Maths</Filter>
+    </ClInclude>
+    <ClInclude Include="Camera.h">
+      <Filter>Header Files\Components\Visual</Filter>
+    </ClInclude>
+    <ClInclude Include="HUDCamera.h">
+      <Filter>Header Files\GameObjects</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Audio.cpp">
       <Filter>Source Files\Components\Audio</Filter>
-    </ClCompile>
-    <ClCompile Include="Matrix3D.cpp">
-      <Filter>Source Files\Components\Maths</Filter>
-    </ClCompile>
-    <ClCompile Include="Matrix4D.cpp">
-      <Filter>Source Files\Components\Maths</Filter>
-    </ClCompile>
-    <ClCompile Include="Quaternion.cpp">
-      <Filter>Source Files\Components\Maths</Filter>
     </ClCompile>
     <ClCompile Include="Client.cpp">
       <Filter>Source Files\Components\Network</Filter>
@@ -304,9 +262,6 @@
     <ClCompile Include="Sphere3D.cpp">
       <Filter>Source Files\Components\Collision</Filter>
     </ClCompile>
-    <ClCompile Include="Physics.cpp">
-      <Filter>Source Files\Components\Physics</Filter>
-    </ClCompile>
     <ClCompile Include="Animation.cpp">
       <Filter>Source Files\Components\Visual</Filter>
     </ClCompile>
@@ -322,28 +277,10 @@
     <ClCompile Include="Text.cpp">
       <Filter>Source Files\Components\Visual</Filter>
     </ClCompile>
-    <ClCompile Include="Transform.cpp">
-      <Filter>Source Files\Components\Visual</Filter>
-    </ClCompile>
-    <ClCompile Include="GameObject.cpp">
-      <Filter>Source Files\GameObjects</Filter>
-    </ClCompile>
-    <ClCompile Include="Grid.cpp">
-      <Filter>Source Files\GameObjects</Filter>
-    </ClCompile>
-    <ClCompile Include="HUD.cpp">
-      <Filter>Source Files\GameObjects</Filter>
-    </ClCompile>
-    <ClCompile Include="MainCamera.cpp">
-      <Filter>Source Files\GameObjects</Filter>
-    </ClCompile>
     <ClCompile Include="MainState.cpp">
       <Filter>Source Files\GameStates</Filter>
     </ClCompile>
     <ClCompile Include="Buffer.cpp">
-      <Filter>Source Files\Main</Filter>
-    </ClCompile>
-    <ClCompile Include="Camera.cpp">
       <Filter>Source Files\Main</Filter>
     </ClCompile>
     <ClCompile Include="Game.cpp">
@@ -364,9 +301,6 @@
     <ClCompile Include="BufferManager.cpp">
       <Filter>Source Files\Managers</Filter>
     </ClCompile>
-    <ClCompile Include="DebugManager.cpp">
-      <Filter>Source Files\Managers</Filter>
-    </ClCompile>
     <ClCompile Include="InputManager.cpp">
       <Filter>Source Files\Managers</Filter>
     </ClCompile>
@@ -379,17 +313,41 @@
     <ClCompile Include="TextureManager.cpp">
       <Filter>Source Files\Managers</Filter>
     </ClCompile>
-    <ClCompile Include="TimeManager.cpp">
-      <Filter>Source Files\Managers</Filter>
-    </ClCompile>
     <ClCompile Include="StartState.cpp">
       <Filter>Source Files\GameStates</Filter>
+    </ClCompile>
+    <ClCompile Include="EndState.cpp">
+      <Filter>Source Files\GameStates</Filter>
+    </ClCompile>
+    <ClCompile Include="Quaternion.cpp">
+      <Filter>Source Files\Components\Maths</Filter>
+    </ClCompile>
+    <ClCompile Include="HUD.cpp">
+      <Filter>Source Files\GameObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject.cpp">
+      <Filter>Source Files\GameObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="MainCamera.cpp">
+      <Filter>Source Files\GameObjects</Filter>
     </ClCompile>
     <ClCompile Include="SplashScreen.cpp">
       <Filter>Source Files\GameObjects</Filter>
     </ClCompile>
-    <ClCompile Include="EndState.cpp">
-      <Filter>Source Files\GameStates</Filter>
+    <ClCompile Include="DebugManager.cpp">
+      <Filter>Source Files\Managers</Filter>
+    </ClCompile>
+    <ClCompile Include="Grid.cpp">
+      <Filter>Source Files\GameObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="Physics.cpp">
+      <Filter>Source Files\Components\Maths</Filter>
+    </ClCompile>
+    <ClCompile Include="Camera.cpp">
+      <Filter>Source Files\Components\Visual</Filter>
+    </ClCompile>
+    <ClCompile Include="HUDCamera.cpp">
+      <Filter>Source Files\GameObjects</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
