--- a/Handmade/Handmade.vcxproj
+++ b/Handmade/Handmade.vcxproj
@@ -142,33 +142,30 @@
     <ClInclude Include="AudioManager.h" />
     <ClInclude Include="Bound.h" />
     <ClInclude Include="Buffer.h" />
-    <ClInclude Include="BufferManager.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="HUDCamera.h" />
-    <ClInclude Include="Client.h" />
-    <ClInclude Include="Color.h" />
     <ClInclude Include="DebugManager.h" />
     <ClInclude Include="EndState.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameState.h" />
-    <ClInclude Include="Grid.h" />
     <ClInclude Include="HUD.h" />
     <ClInclude Include="InputManager.h" />
+    <ClInclude Include="Light.h" />
     <ClInclude Include="Line2D.h" />
     <ClInclude Include="Line3D.h" />
     <ClInclude Include="MainCamera.h" />
     <ClInclude Include="MainState.h" />
+    <ClInclude Include="Material.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="OBB2D.h" />
     <ClInclude Include="OBB3D.h" />
     <ClInclude Include="Physics.h" />
+    <ClInclude Include="PipelineManager.h" />
     <ClInclude Include="Plane2D.h" />
     <ClInclude Include="Plane3D.h" />
     <ClInclude Include="Quaternion.h" />
     <ClInclude Include="ScreenManager.h" />
-    <ClInclude Include="Server.h" />
-    <ClInclude Include="ShaderManager.h" />
     <ClInclude Include="Singleton.h" />
     <ClInclude Include="Sphere2D.h" />
     <ClInclude Include="Sphere3D.h" />
@@ -176,7 +173,7 @@
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="StartState.h" />
     <ClInclude Include="Text.h" />
-    <ClInclude Include="TextureManager.h" />
+    <ClInclude Include="Texture.h" />
     <ClInclude Include="Tools.h" />
     <ClInclude Include="Variable.h" />
   </ItemGroup>
@@ -188,40 +185,38 @@
     <ClCompile Include="AudioManager.cpp" />
     <ClCompile Include="Bound.cpp" />
     <ClCompile Include="Buffer.cpp" />
-    <ClCompile Include="BufferManager.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="GameState.cpp" />
     <ClCompile Include="HUDCamera.cpp" />
-    <ClCompile Include="Client.cpp" />
-    <ClCompile Include="Color.cpp" />
     <ClCompile Include="DebugManager.cpp" />
     <ClCompile Include="EndState.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameObject.cpp" />
-    <ClCompile Include="Grid.cpp" />
     <ClCompile Include="HUD.cpp" />
     <ClCompile Include="InputManager.cpp" />
+    <ClCompile Include="Light.cpp" />
     <ClCompile Include="Line2D.cpp" />
     <ClCompile Include="Line3D.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MainCamera.cpp" />
     <ClCompile Include="MainState.cpp" />
+    <ClCompile Include="Material.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="OBB2D.cpp" />
     <ClCompile Include="OBB3D.cpp" />
     <ClCompile Include="Physics.cpp" />
+    <ClCompile Include="PipelineManager.cpp" />
     <ClCompile Include="Plane2D.cpp" />
     <ClCompile Include="Plane3D.cpp" />
     <ClCompile Include="Quaternion.cpp" />
     <ClCompile Include="ScreenManager.cpp" />
-    <ClCompile Include="Server.cpp" />
-    <ClCompile Include="ShaderManager.cpp" />
     <ClCompile Include="Sphere2D.cpp" />
     <ClCompile Include="Sphere3D.cpp" />
     <ClCompile Include="SplashScreen.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="StartState.cpp" />
     <ClCompile Include="Text.cpp" />
-    <ClCompile Include="TextureManager.cpp" />
+    <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Tools.cpp" />
     <ClCompile Include="Variable.cpp" />
   </ItemGroup>
