--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,15 @@
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
 
-# Folder config file
-Desktop.ini
+#main stuff not needed to build project
+Handmade.VC.db
+Handmade.VC.VC.opendb
 
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
+#all photoshop assets
+Handmade/Assets/PSD
 
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
+#the outer Debug/Release folders
+Debug
+Release
 
-# Windows shortcuts
-*.lnk
-
-# =========================
-# Operating System Files
-# =========================
-
-# OSX
-# =========================
-
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+#the inner Debug/Release folders
+Handmade/Debug
+Handmade/Release
