--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 #main stuff not needed to build project
 Handmade.VC.db
 Handmade.VC.VC.opendb
+.vs/Handmade/v14/.suo
 
 #all photoshop assets
 Handmade/Assets/PSD
