--- a/Handmade/Handmade.vcxproj.filters
+++ b/Handmade/Handmade.vcxproj.filters
@@ -334,5 +334,8 @@
     <ClCompile Include="Camera.cpp">
       <Filter>Source Files\Components\Core</Filter>
     </ClCompile>
+    <ClCompile Include="glad.c">
+      <Filter>Source Files\Main</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
