--- a/Handmade/Handmade.vcxproj
+++ b/Handmade/Handmade.vcxproj
@@ -135,7 +135,7 @@
     <None Include="Shaders\Main.vert" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AABB3D.h" />
+    <ClInclude Include="AABB.h" />
     <ClInclude Include="Animation.h" />
     <ClInclude Include="Audio.h" />
     <ClInclude Include="AudioManager.h" />
@@ -159,7 +159,7 @@
     <ClInclude Include="Quaternion.h" />
     <ClInclude Include="ScreenManager.h" />
     <ClInclude Include="Singleton.h" />
-    <ClInclude Include="Sphere3D.h" />
+    <ClInclude Include="Sphere.h" />
     <ClInclude Include="SplashScreen.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="StartState.h" />
@@ -169,7 +169,7 @@
     <ClInclude Include="Variable.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="AABB3D.cpp" />
+    <ClCompile Include="AABB.cpp" />
     <ClCompile Include="Animation.cpp" />
     <ClCompile Include="Audio.cpp" />
     <ClCompile Include="AudioManager.cpp" />
@@ -194,7 +194,7 @@
     <ClCompile Include="PipelineManager.cpp" />
     <ClCompile Include="Quaternion.cpp" />
     <ClCompile Include="ScreenManager.cpp" />
-    <ClCompile Include="Sphere3D.cpp" />
+    <ClCompile Include="Sphere.cpp" />
     <ClCompile Include="SplashScreen.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="StartState.cpp" />
