--- a/Handmade/Handmade.vcxproj.filters
+++ b/Handmade/Handmade.vcxproj.filters
@@ -89,12 +89,6 @@
     <ClInclude Include="Audio.h">
       <Filter>Header Files\Components\Audio</Filter>
     </ClInclude>
-    <ClInclude Include="AABB3D.h">
-      <Filter>Header Files\Components\Collision</Filter>
-    </ClInclude>
-    <ClInclude Include="Sphere3D.h">
-      <Filter>Header Files\Components\Collision</Filter>
-    </ClInclude>
     <ClInclude Include="Animation.h">
       <Filter>Header Files\Components\Visual</Filter>
     </ClInclude>
@@ -182,16 +176,16 @@
     <ClInclude Include="Camera.h">
       <Filter>Header Files\Components\Core</Filter>
     </ClInclude>
+    <ClInclude Include="AABB.h">
+      <Filter>Header Files\Components\Collision</Filter>
+    </ClInclude>
+    <ClInclude Include="Sphere.h">
+      <Filter>Header Files\Components\Collision</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Audio.cpp">
       <Filter>Source Files\Components\Audio</Filter>
-    </ClCompile>
-    <ClCompile Include="AABB3D.cpp">
-      <Filter>Source Files\Components\Collision</Filter>
-    </ClCompile>
-    <ClCompile Include="Sphere3D.cpp">
-      <Filter>Source Files\Components\Collision</Filter>
     </ClCompile>
     <ClCompile Include="Animation.cpp">
       <Filter>Source Files\Components\Visual</Filter>
@@ -282,6 +276,12 @@
     </ClCompile>
     <ClCompile Include="glad.c">
       <Filter>Source Files\Main</Filter>
+    </ClCompile>
+    <ClCompile Include="AABB.cpp">
+      <Filter>Source Files\Components\Collision</Filter>
+    </ClCompile>
+    <ClCompile Include="Sphere.cpp">
+      <Filter>Source Files\Components\Collision</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
