--- a/Handmade/Handmade.vcxproj.filters
+++ b/Handmade/Handmade.vcxproj.filters
@@ -78,6 +78,12 @@
     <None Include="Shaders\Main.vert">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="Shaders\Default.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\Default.vert">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Audio.h">
@@ -99,12 +105,6 @@
       <Filter>Header Files\GameStates</Filter>
     </ClInclude>
     <ClInclude Include="Game.h">
-      <Filter>Header Files\Main</Filter>
-    </ClInclude>
-    <ClInclude Include="Tools.h">
-      <Filter>Header Files\Main</Filter>
-    </ClInclude>
-    <ClInclude Include="Variable.h">
       <Filter>Header Files\Main</Filter>
     </ClInclude>
     <ClInclude Include="AudioManager.h">
@@ -188,12 +188,6 @@
       <Filter>Source Files\GameStates</Filter>
     </ClCompile>
     <ClCompile Include="Game.cpp">
-      <Filter>Source Files\Main</Filter>
-    </ClCompile>
-    <ClCompile Include="Tools.cpp">
-      <Filter>Source Files\Main</Filter>
-    </ClCompile>
-    <ClCompile Include="Variable.cpp">
       <Filter>Source Files\Main</Filter>
     </ClCompile>
     <ClCompile Include="Main.cpp">
