--- a/Handmade/Handmade.vcxproj.filters
+++ b/Handmade/Handmade.vcxproj.filters
@@ -72,16 +72,16 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Shaders\Main.frag">
-      <Filter>Shaders</Filter>
-    </None>
-    <None Include="Shaders\Main.vert">
-      <Filter>Shaders</Filter>
-    </None>
     <None Include="Shaders\Default.frag">
       <Filter>Shaders</Filter>
     </None>
     <None Include="Shaders\Default.vert">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\ADS.frag">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="Shaders\ADS.vert">
       <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
