--- a/Handmade/Handmade.vcxproj.filters
+++ b/Handmade/Handmade.vcxproj.filters
@@ -137,9 +137,6 @@
     <ClInclude Include="Model.h">
       <Filter>Header Files\Components\Visual</Filter>
     </ClInclude>
-    <ClInclude Include="HUD.h">
-      <Filter>Header Files\GameObjects</Filter>
-    </ClInclude>
     <ClInclude Include="Buffer.h">
       <Filter>Header Files\Components\Core</Filter>
     </ClInclude>
@@ -194,6 +191,9 @@
     <ClInclude Include="Axes3D.h">
       <Filter>Header Files\GameObjects\Debug</Filter>
     </ClInclude>
+    <ClInclude Include="HUD.h">
+      <Filter>Header Files\GameObjects\Debug</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Audio.cpp">
@@ -234,9 +234,6 @@
     </ClCompile>
     <ClCompile Include="Model.cpp">
       <Filter>Source Files\Components\Visual</Filter>
-    </ClCompile>
-    <ClCompile Include="HUD.cpp">
-      <Filter>Source Files\GameObjects</Filter>
     </ClCompile>
     <ClCompile Include="GameState.cpp">
       <Filter>Source Files\GameStates</Filter>
@@ -296,6 +293,9 @@
       <Filter>Source Files\GameObjects\Debug</Filter>
     </ClCompile>
     <ClCompile Include="Axes3D.cpp">
+      <Filter>Source Files\GameObjects\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="HUD.cpp">
       <Filter>Source Files\GameObjects\Debug</Filter>
     </ClCompile>
   </ItemGroup>
