--- a/Handmade/Handmade.vcxproj
+++ b/Handmade/Handmade.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="HUD.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="Light.h" />
+    <ClInclude Include="Element.h" />
     <ClInclude Include="MainState.h" />
     <ClInclude Include="Material.h" />
     <ClInclude Include="Model.h" />
@@ -191,6 +192,7 @@
     <ClCompile Include="HUD.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="Light.cpp" />
+    <ClCompile Include="Element.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="MainState.cpp" />
     <ClCompile Include="Material.cpp" />
