--- a/Handmade/Handmade.vcxproj.filters
+++ b/Handmade/Handmade.vcxproj.filters
@@ -206,6 +206,9 @@
     <ClInclude Include="Quad.h">
       <Filter>Header Files\GameObjects\Primitives</Filter>
     </ClInclude>
+    <ClInclude Include="Cuboid.h">
+      <Filter>Header Files\GameObjects\Primitives</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Audio.cpp">
@@ -314,6 +317,9 @@
       <Filter>Source Files\Components\Physics</Filter>
     </ClCompile>
     <ClCompile Include="Quad.cpp">
+      <Filter>Source Files\GameObjects\Primitives</Filter>
+    </ClCompile>
+    <ClCompile Include="Cuboid.cpp">
       <Filter>Source Files\GameObjects\Primitives</Filter>
     </ClCompile>
   </ItemGroup>
