--- a/Handmade/Handmade.vcxproj.filters
+++ b/Handmade/Handmade.vcxproj.filters
@@ -209,6 +209,9 @@
     <ClInclude Include="Cuboid.h">
       <Filter>Header Files\GameObjects\Primitives</Filter>
     </ClInclude>
+    <ClInclude Include="Sphere.h">
+      <Filter>Header Files\GameObjects\Primitives</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Audio.cpp">
@@ -320,6 +323,9 @@
       <Filter>Source Files\GameObjects\Primitives</Filter>
     </ClCompile>
     <ClCompile Include="Cuboid.cpp">
+      <Filter>Source Files\GameObjects\Primitives</Filter>
+    </ClCompile>
+    <ClCompile Include="Sphere.cpp">
       <Filter>Source Files\GameObjects\Primitives</Filter>
     </ClCompile>
   </ItemGroup>
