--- a/Handmade/Handmade.vcxproj.filters
+++ b/Handmade/Handmade.vcxproj.filters
@@ -212,6 +212,9 @@
     <ClInclude Include="Sphere.h">
       <Filter>Header Files\GameObjects\Primitives</Filter>
     </ClInclude>
+    <ClInclude Include="Circle.h">
+      <Filter>Header Files\GameObjects\Primitives</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Audio.cpp">
@@ -326,6 +329,9 @@
       <Filter>Source Files\GameObjects\Primitives</Filter>
     </ClCompile>
     <ClCompile Include="Sphere.cpp">
+      <Filter>Source Files\GameObjects\Primitives</Filter>
+    </ClCompile>
+    <ClCompile Include="Circle.cpp">
       <Filter>Source Files\GameObjects\Primitives</Filter>
     </ClCompile>
   </ItemGroup>
